# d2lootfilter

./: .gitignore  LICENSE  README.md  example.filter  pyproject.toml  test.filter
d2lootfilter/: data.py  filter.py  format.py  parser.py  writer.py
